--- a/devfile.yaml
+++ b/devfile.yaml
@@ -4,7 +4,7 @@ metadata:
 components:
   - name: python
     container:
-      image: registry.redhat.io/devspaces/udi-rhel9:3.19
+      image: registry.redhat.io/ubi9/python-311
       volumeMounts:
         - name: venv
           path: /home/user/.venv
