--- a/devfile.yaml
+++ b/devfile.yaml
@@ -21,7 +21,7 @@ commands:
     exec:
       label: "Run the application"
       component: python
-      workingDir: ${PROJECTS_ROOT}/Python-Sample
+      workingDir: ${PROJECTS_ROOT}/python-sample
       commandLine: python3.11 -m venv .venv && . .venv/bin/activate && python hello-world.py
       group:
         kind: run
