--- a/devfile.yaml
+++ b/devfile.yaml
@@ -19,9 +19,10 @@ components:
 commands:
   - id: run
     exec:
-      label: "Run the application"
+      label: Run the application
       component: python
       workingDir: ${PROJECTS_ROOT}/python-sample
-      commandLine: python3.11 -m venv .venv && . .venv/bin/activate && python hello-world.py
+      commandLine: |
+        python3.11 -m venv .venv && export PATH=${PROJECTS_ROOT}/python-sample/.venv/bin:$PATH && python hello-world.py
       group:
         kind: run
