--- a/devfile.yaml
+++ b/devfile.yaml
@@ -17,12 +17,22 @@ components:
     volume:
       size: 1G
 commands:
-  - id: run
+  - id: setup-venv
+    exec:
+      label: "Setup and Activate Virtual Environment"
+      component: python
+      workingDir: ${PROJECTS_ROOT}/python-sample
+      commandLine: /bin/bash -c "python3.11 -m venv /home/user/.venv && echo 'source /home/user/.venv/bin/activate' >> /home/user/.bashrc"
+      group:
+        kind: build
+        isDefault: true
+
+  - id: run-app
     exec:
       label: "Run the application"
       component: python
       workingDir: ${PROJECTS_ROOT}/python-sample
-      commandLine: python -m venv .venv && . .venv/bin/activate && python hello-world.py
+      commandLine: /bin/bash -c "source /home/user/.venv/bin/activate && python hello-world.py"
       group:
         kind: run
         isDefault: true
