--- a/devfile.yaml
+++ b/devfile.yaml
@@ -6,8 +6,8 @@ components:
     container:
       image: registry.redhat.io/devspaces/udi-rhel9:3.19
       volumeMounts:
-        - name: venv
-          path: /home/user/.venv
+        - name: user
+          path: /home/user/
       memoryLimit: '2Gi'
       memoryRequest: '1Gi'
       cpuLimit: '2'
@@ -35,7 +35,8 @@ commands:
         /bin/bash -c "mkdir -p ~/miniconda3 && \
         wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh && \
         bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3 && \
-        rm ~/miniconda3/miniconda.sh"
+        rm ~/miniconda3/miniconda.sh && \
+        source ~/miniconda3/bin/activate"
       group:
         kind: build
 
