--- a/devfile.yaml
+++ b/devfile.yaml
@@ -5,6 +5,8 @@ components:
   - name: python
     container:
       image: 128193294407.dkr.ecr.ap-east-1.amazonaws.com/poc-devspace/ubi9:latest
+      memoryLimit: '2Gi'
+      memoryRequest: '1Gi'
       volumeMounts:
         - name: venv
           path: /home/user/.venv
@@ -22,17 +24,6 @@ commands:
       group:
         kind: build
         isDefault: true
-
-  - id: run-app
-    exec:
-      label: "Run the application"
-      component: python
-      workingDir: ${PROJECTS_ROOT}/python-sample
-      commandLine: /bin/bash -c "source /home/user/.venv/bin/activate && python hello-world.py"
-      group:
-        kind: run
-        isDefault: true
 events:
   postStart:
     - setup-venv
-    - run-app
